<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">


    <!--This XML layout will consist of (in order of appearance)
    A TextView to display the webcam's title
    A TextView to display  the webcam's city and region
    View to fill space
    ImageView to display webcam's thumbnail image
    View to fill space-->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/quantum_grey"
        android:justificationMode="inter_word"
        android:paddingRight="20dp"
        android:layout_weight="0.2"/>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/quantum_grey"
        android:justificationMode="inter_word"
        android:layout_weight="0.2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>

</LinearLayout>